# ltron-api

./: .gitignore  README.md  USER_GUIDE.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: gen-icons.py
specs/001-ltron-api/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-ltron-api/contracts/: commands.md  events.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  fs_ops.rs  http.rs  lib.rs  main.rs  paths.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/lib/: interpolation.ts  lib-types.ts  sender.ts
ui/src/lib/__tests__/: interpolation.test.ts  models.test.ts  sender.test.ts
ui/src/lib/components/: AuthPanel.svelte  BodyEditor.svelte  EnvEditorModal.svelte  EnvSwitcher.svelte  GlobalsModal.svelte  HistoryPane.svelte  KVTable.svelte  ResponsePane.svelte  Sidebar.svelte  SidebarTree.svelte  TopBar.svelte  TutorialModal.svelte  VarSuggest.svelte
ui/src/lib/ipc/: fs.ts  http.ts  paths.ts  types.ts
ui/src/lib/models/: index.ts
ui/src/lib/state/: app.svelte.ts
ui/src/lib/storage/: bundle.ts  io.ts  paths.ts  store.ts
