[package]
name = "ltron-api"
version = "0.1.0"
description = "Lightweight desktop API client"
authors = ["Lokesh Vyavhare <lokesh.vyavhare@tricog.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ltron_api_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream", "multipart", "gzip", "brotli", "deflate", "http2", "json"] }
futures-util = "0.3"
thiserror = "1"
uuid = { version = "1", features = ["v7", "serde"] }
dashmap = "6"
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
incremental = false
